--- a/python_プログラミング入門.ipynb
+++ b/python_プログラミング入門.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +127,7 @@
     }
    ],
    "source": [
+    "# べき乗\n",
     "math.sqrt(2)"
    ]
   },
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,12 +162,13 @@
        "3.141592653589793"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 円周率\n",
     "math.pi"
    ]
   },
@@ -175,26 +177,6 @@
    "metadata": {},
    "source": [
     "## 黄金比を求める"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.23606797749979"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "math.sqrt(5)"
    ]
   },
   {
@@ -236,13 +218,6 @@
    "source": [
     "phi"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -291,12 +266,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bmi(height, weight):\n",
-    "    return weight / (height/100.0) ** 2"
+    "    return weight / (height/100.0) ** 2\n",
+    "\n",
+    "# 関数の定義 def 関数名(引数, ...):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**引数** とは、関数が受け取る値を指し示す変数のことです。仮引数ともいう。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**return 式**\n",
+    "return に続く式の評価結果を、関数の呼び出し元に返して関数を終了する。"
    ]
   },
   {
@@ -317,6 +309,15 @@
    ],
    "source": [
     "bmi(173.0, 90.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**予約語**\n",
+    "- Pythonでの def や return は、関数定義やreturn文の始まりを記述するための特別な記号。それ以外の用途に使用できない。 \n",
+    "- Codeセルの構文ハイライトで（太字緑色などで）強調されるものが予約語だと覚えておけば大体問題ありません。"
    ]
   },
   {
@@ -384,15 +385,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ローカル変数"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "def heron(a, b, c):\n",
-    "    s = 0.5*(a+b+c)\n",
+    "    s = 0.5*(a+b+c)  # s がローカル変数。　この関数の中だけで利用可能な変数。\n",
     "    return math.sqrt(s * (s-a) * (s-b) * (s-c))"
    ]
   },
@@ -456,6 +464,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### print\n",
+    "\n",
+    "- print は関数内から呼び出すことでローカル変数の値を確認できる\n",
+    "- print は任意個の引数を取得可能。\n",
+    "- コンマ, の区切りには空白文字が出力される。\n",
+    "- 引数を与えずに呼び出した場合には、改行のみを出力する。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -486,6 +506,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 関数が値を返すことを期待されている場合は、必ず **return** を使う "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -495,7 +522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +536,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
